[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Anthropic-Agent-Handler"
version = "0.0.1"
description = "Anthropic Agent Handler"
authors = [
    {name = "IdeaBosque", email = "ideabosque@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SilvaEngine-Utility",
    "AI-Agent-Handler",
    "anthropic",
    "httpx[http2]",  # HTTP/2 support for enhanced performance
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssue = "none"
reportOperatorIssue = "none"
